Fix menu alignment

--- a/assets/css/components/menu.css
+++ b/assets/css/components/menu.css
@@ -39,7 +39,7 @@
 }
 
 .nav__list__item {
-	width: 80%;
+	width: 100%;
 	text-align: center;
 }
 
